Bug 155495 - Editing centered or right-aligned cell contents incorrectly
Summary: Editing centered or right-aligned cell contents incorrectly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks: Cell-Edit-Mode
  Show dependency treegraph
 
Reported: 2023-05-25 16:05 UTC by RoF
Modified: 2023-08-30 13:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple predefined table document to reproduce the error (11.31 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-05-25 16:07 UTC, RoF
Details

Note You need to log in before you can comment on or make changes to this bug.
Description RoF 2023-05-25 16:05:47 UTC
Description:
Cells that are centered or right-aligned cannot always be edited. When I click in the left area, the hidden cell is selected instead of placing the cursor at the selected text location.

Steps to Reproduce:
1. fill adjacent 3 cells with longer text
2. align the middle cell to the center and the right cell to the right
3. edit the middle/right cell and try to click into the left text area (which covers the left cell)

Actual Results:
The left (covered) cell is selected

Expected Results:
The cursor should be placed in the selected text location


Reproducible: Always


User Profile Reset: No

Additional Info:
Incorrect handling has been tested under Debian with Version 7.0.4.2/7.4.5.1 and Archlinux with 7.5.3.2
Comment 1 RoF 2023-05-25 16:07:26 UTC
Created attachment 187502 [details]
Simple predefined table document to reproduce the error
Comment 2 m_a_riosv 2023-05-25 21:19:09 UTC
Reproducible.
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Seems, when at the left, points to the cells not to the edited text over them
Works fine in the other direction.
Comment 3 Commit Notification 2023-08-29 14:49:54 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/62e201d2cf82f4ccaa6564bd2420ac6582594b8f

tdf#155495 sc: fix cursor positioning editing centered/right-aligned cells

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-30 09:58:40 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/dc057620aa4652baa73301cf668511b1fd33190f

tdf#155495 sc: fix cursor positioning editing centered/right-aligned cells

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 m_a_riosv 2023-08-30 13:17:17 UTC
Verified
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 33ae7c12bbdf19b76ced472ca8aed6cf66477bbe
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded